[package]
name = "clickhouse-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wit-bindgen = "0.43.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
